<resources>
    <string name="app_name">HelpTics</string>
    <string name="title_materi">Materi</string>
    <string name="title_forum">Forum</string>
    <string name="title_akun">Akun</string>
    <string name="home">Main Menu</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="not_registered">don\'t have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Have some account?</string>
    <string name="title_home">Home</string>
    <string name="judul">Judul</string>
    <string name="isi_materi">Isi Materi</string>
    <string name="math">Matematika</string>
    <string name="materi_math">
        <b>A. Pecahan \n\n</b>
        Materi tentang bilangan pecahan dalam pelajaran matematika pasti sudah tidak asing lagi bagi para pelajar. Biasanya dalam soal ujian, terdapat beberapa soal tentang bilangan pecahan sehingga Anda harus bisa membedakan jenis-jenisnya agar mengetahui cara menghitung yang tepat.\n\n

        <b>1. Pecahan Biasa\n</b>
        Pecahan biasa adalah bentuk pecahan yang mana nilai penyebut lebih besar daripada pembilang atau  a/b dengan a adalah bilangan pembilang dan b adalah bilangan penyebut (penyebut > pembilang). Berikut adalah contohnya. \n
         * 5/6, dimana 5 adalah pembilang dan 6 adalah penyebut.\n
         * 2/8, dimana 2 adalah pembilang dan 6 adalah penyebut.

        \n\n
        <b> 2. Pecahan Campuran\n </b>
        Pecahan campuran adalah jenis bilangan pecahan yang terdiri dari bagian bulat serta pecahan. Bilangan ini bisa berbentuk c a/b dengan c sebagai bilangan bulat dan a/b adalah pecahannya. Berikut adalah contohnya.\n
         * 1 ¼, dimana 1 adalah bilangan bulat dan ¼ adalah pecahan.\n
         * 2 ¾, dimana 2 adalah bilangan bulat dan ¾ adalah pecahan.

        \n\n
        <b> 3. Pecahan Desimal\n</b>
        Pecahan desimal adalah jenis nilai pecahan dengan besaran bilangan penyebutnya antara lain 10, 100, dan seterusnya. Adapun penulisan dari bilangan ini adalah dengan menggunakan tanda koma. Berikut adalah contohnya.\n
         * Bilangan persepuluhan, seperti 2/10, maka ditulis 0,2.\n
         * Bilangan perseratusan, seperti 25/100, maka ditulis 0,25.\n
        \n

        <b> 4. Pecahan Senilai\n </b>
        Pecahan senilai adalah dua atau lebih pecahan dengan perbandingan nilai dari pembilang dan penyebut sama. Contohnya seperti 2/5 dan 4/10, dimana dua bilangan ini merupakan pecahan senilai.\n
         - 2/5, perbandingan pembilang dan penyebutnya adalah 2:5.\n
         - 4/10, perbandingan pembilang dan penyebutnya adalah 4:10 atau sama dengan 2:5. \n

        \n\n
        <b>B. Mean, Median, Modus</b>\n\n
        <b>1. Rata-rata atau Mean</b>\n
        Rata-rata disebut juga mean dengan lambang x (dibaca x bar). Kita bisa menghitung nilai rata-rata atau mean dari data tunggal dan data tunggal berkelompok atau berfrekuensi.  Apa ya bedanya data tunggal dan data tunggal berkelompok?
        Jadi kalo data tunggal, kita mengumpulkan atau memperoleh data apa adanya (bisa berurutan atau acak) dan tidak mengelompokkannya ke tabel frekuensi. Contoh data tunggal :\n
        <b>Nilai Ujian Matematika kelas VIII-A</b>\n
        5   9   7   8   6   5\n
        6   8   9   5   7   8\n
        7   9   8   6   6   5\n
        8   8   6   5   7   5\n
        7   8   6   5   5   7\n
        \n
        \n

    </string>
    <string name="materi_kom">
        <b>A. Hardware dan Software</b>\n\n

        Komputer memiliki peranan penting dalam membantu aktivitas manusia karena memiliki beberapa fitur canggih di dalam sistem kerjanya.
        Di dalam sebuah komputer terdapat 2 istilah yang berkaitan dengan sistem kerja dari komputer itu sendiri, yaitu hardware dan software. Berikut ini adalah materi pengertian hardware, software, dan brainware yang perlu diketahui :\n
        \n
        <b>[1] Perangkat Keras (Hardware)</b>\n
        Hardware atau perangkat keras adalah seluruh komponen fisik yang terdapat di dalam komputer. Bentuk dari perangkat hardware cukup mudah dikenali, yaitu semua komponen yang dapat dilihat dan diraba secara langsung dan berbentuk nyata adalah perangkat hardware.
        Fungsi hardware adalah untuk memudahkan si pengguna komputer saat bekerja. Fungsi lainnya adalah agar sistem komputer dapat bekerja dengan baik.
        Perangkat hardware sendiri dibagi menjadi tiga jenis,yaitu perangkat input, perangkat proses, dan perangkat output.\n\n

        <b>a. Perangkat Input (Input Device)</b>\n
        Perangkat input berfungsi sebagai perangkat masukan user yang nantinya akan di proses oleh sistem komputer. Bentuk masukan ke dalam komputer bisa dari berbagai format data, seperti teks, foto, gambar, hingga video.
        Berikut ini adalah beberapa perangkat input yang biasanya digunakan di dalam komputer.\n\n

        1. Keyboard\n
        Di dalam sebuah perangkat komputer tentunya harus memiliki perangkat keyboard. Keyboard sendiri berfungsi sebagai perangkat yang menginput masukan berupa teks dengan tombol-tombol yang telah disediakan.
        Walaupun saat ini windows telah menyediakan keyboard di dalam softwarenya, tentunya dalam proses mengetik lebih nyaman menggunakan perangkat kerasnya.
        \n
        2. Mouse\n
        Salah satu perangkat keras lainnya yang harus ada di dalam sebuah komputer adalah mouse. Mouse sendiri berfungsi untuk menggerakan kursor dan membantu dalam memilih opsi perintah yang terdapat di dalam komputer.
        Mouse pun saat ini sudah lebih berkembang dan memiliki berbagai jenis mouse, seperti mouse game yang memiliki lebih banyak tombol dan bentuk yang berbeda dibandingkan dengan mouse pada umumnya.
        \n
        \n

        <b>b. Perangkat Proses (Process Device)</b>\n
        Perangkat proses adalah perangkat pengolah data yang berasal dari perangkat keras input. Biasanya perangkat jenis ini terdapat di dalam komputer, jadi tidak dapat terlihat jika Anda belum membongkar komputer.\n
        Berikut ini adalah beberapa perangkat proses yang terdapat di dalam komputer.\n\n
        1. Motherboard\n
        Motherboard adalah perangkat yang berfungsi sebagai tempat untuk beberapa komponen saling terhubung untuk menjalankan sistem operasi.
        Motherboard adalah salah satu perangkat penting yang terdapat di dalam komputer, jadi jika perangkat motherboard rusak tentu akan menggangu sistem kerja komputer tersebut.
        \n\n
        2. Processor atau CPU\n
        Processor atau CPU ini adalah komponen komputer yang berfungsi menjadi otak-nya komputer yang berkerja untuk mengendalikan proses dari suatu komputer dan dibantu oleh perangkat lainnya. Prosessor ini memiliki bentuk segiempat yang terletak pada motherboard.
        Berikut adalah contoh prosessor yang masih digunakan saat ini, seperti: Intel Pentium 4, Dual Core, Core 2 Duo, Core i3, Core i5, Core i7 dan ada juga AMD.
        \n\n
        3. Perangkat Output (Output Device)\n
        Perangkat ouput adalah berbagai perangkat hardware yang berfungsi sebagai media keluaran dari hasil pengolahan data komputer.
        Perangkat output sendiri bentuknya dapat terlihat agar Anda dapat melihat hasil dari masukan yang telah di olah sebelumya dengan sistem. Di bawah ini adalah beberapa contoh perangkat output yang ada di dalam sebuah komputer.
        \n
        1. Printer\n
        Printer biasanya digunakan untuk mencetak hasil sebuah data dalam bentuk teks maupun gambar. Saat ini printer lebih banyak memiliki fitur-fitur canggih, seperti fitur fotocopy atau fitur scanning yang tentu sangat membantu Anda dalam mempermudah pekerjaan.
        \n
        2. Speaker\n
        Speaker adalah sebuah perangkat output yang berfungsi untuk mengeluarkan data berupa suara. Biasanya pada komputer keluaran terbaru sudah menyediakan perangkat speaker di dalamnya, jadi tidak perlu menggunakan perangkat speaker eksternal hanya untuk mendengarkan suara keluaran.
        \n\n\n

        <b>[2] Perangkat Lunak (Software)</b>\n\n
        Software atau perangkat lunak adalah kumpulan data elektronik yang disimpan dan dikelola oleh komputer. Data elektronik tersebut bisa berupa sebuah program atau aplikasi yang nantinya akan menjalankan sebuah perintah dari user.
        Fungsi software di dalam komputer bertugas agar dapat menjalankan program dan menghasilkan output sesuai keinginan Anda sendiri.
        Software komputer sendiri dibagi menjadi 2 tipe, yaitu software sistem operasi dan software aplikasi. Software sistem operasi biasanya berguna sebagai sistem operasi sebuah perangkat komputer, seperti windows, iOS, linux, dan lain-lain.
        Sedangkan software aplikasi adalah beberapa program yang dapat membantu Anda dalam melakukan hal sesuai kebutuhan Anda.
        \n\n
        Sistem Operasi (OS)\n
        1. Windows\n
        Windows mungkin bisa menjadi sistem operasi yang paling banyak digunakan pada perangkat komputer saat ini. Dikeluarkan pertama kali pada tahun 1990 oleh Microsoft Corp, saat ini windows sudah memiliki beragam versi, seperti windows 7, windows 8, dan yang paling baru adalah windows 10.
        \n
        2. Microsoft DOS (Disk Operating System)\n
        Dikeluarkan pertama kali pada tahun 1981, Microsoft DOS adalah salah satu sistem operasi yang digunakan pada perangkat komputer.
        Sebelum diambil alih oleh Microsoft Corp, sistem operasi ini pertama kali dikembangkan oleh Tim Petterson, CEO dari perusahaan Seatle Computer Products.
        \n
        3. Mac OS\n
        Mac OS adalah sistem operasi yang dibuat khusus untuk pengguna perangkat Mac, produk dari Apple. Pertama kali dikenalkan pada tahun 1984, saat ini Mac OS menjadi pesaing utama windows dalam bidang teknologi sistem operasi.
        \n\n
        Software Aplikasi\n
        1. Adobe Photoshop\n
        Adobe Photoshop menjadi salah satu software aplikasi yang banyak terpasang di semua perangkat komputer. Dikembangkan oleh perusahaan Adobe system. Program aplikasi ini dikhususkan untuk Anda yang ingin melakukan editing foto/gambar hingga membuat sebuah efek.
        \n
        2. Google Chrome\n
        Dengan kemajuan teknologi internet, tentunya Anda juga harus menggunakan aplikasi browser yang cukup baik. Salah satu aplikasi browser yang banyak digunakan saat ini adalah Google Chrome. Dengan user interface yang menarik membuat Anda akan mudah dalam mengakses internet.
        \n\n\n\n\n\n

    </string>
    <string name="kom">Komputer</string>
    <string name="eng">Bahasa Inggris</string>
    <string name="his">Sejarah</string>
</resources>