<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="40dp"
        android:textStyle="bold"
        android:shadowColor="#09708A"
        android:shadowDx="3.4"
        android:shadowDy="3.0"
        android:shadowRadius="5"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo2"
        />

    <EditText
        android:id="@+id/usernameTextView"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="#ffffff"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/passwordTextView"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/confpasswordTextView"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:background="#ffffff"
        android:hint="@string/confirm_password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_on_secondary"
        android:textColor="@color/white"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:shadowColor="@color/cardview_shadow_start_color"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#f0bb62"
            android:textSize="15dp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>