<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="@color/cardview_dark_background"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:textStyle="bold"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo2"
        />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameTextView"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#c4c4c4"
        android:textColor="@color/white"
        android:text="@string/login"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#F0BB62"
            android:text="@string/register"/>

    </LinearLayout>



</LinearLayout>