<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_wave">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:textColor="@color/purple_700"
                />


            <ImageButton
                android:id="@+id/imagebutton1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_materi"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_materi"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/imagebutton2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_akun"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_akun"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/imagebutton3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_forum"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_forum"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"/>




            <ImageView
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:src="@drawable/logo2" />


        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>